fix initialization cast, refactor